--- a/src/main/resources/html_templates/namespace.html
+++ b/src/main/resources/html_templates/namespace.html
@@ -11,11 +11,11 @@
 
 <body>
     <nav class="navbar navbar-light navbar-expand-md" style="background-color: #93b7d1;padding-top: 0px;padding-bottom: 0px;">
-        <div class="container-fluid"><a class="navbar-brand text-light" href="./index.html" style="margin-right: 30px;"><img src="assets/img/pluginIcon.svg" width="64px">Rider-DocGenerator</a><button data-toggle="collapse" class="navbar-toggler" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+        <div class="container-fluid"><a class="navbar-brand text-light" href="index/index.html" style="margin-right: 30px;"><img src="assets/img/pluginIcon.svg" width="64px">Rider-DocGenerator</a><button data-toggle="collapse" class="navbar-toggler" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
             <div
                 class="collapse navbar-collapse" id="navcol-1">
                 <ul class="nav navbar-nav">
-                    <li class="nav-item" role="presentation"><a class="nav-link active" href="./index.html">Namespaces</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link active" href="index/index.html">Namespaces</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link active" href="#">Tree</a></li>
                 </ul>
         </div>
