--- a/src/main/resources/html_templates/index/index.html
+++ b/src/main/resources/html_templates/index/index.html
@@ -11,11 +11,11 @@
 
 <body>
     <nav class="navbar navbar-light navbar-expand-md" style="background-color: #93b7d1;padding-top: 0px;padding-bottom: 0px;">
-        <div class="container-fluid"><a class="navbar-brand" href="index.html" style="margin-right: 30px;color: rgba(254,254,254,0.9);"><img src="assets/img/pluginIcon.svg" width="64px">Rider-DocGenerator</a><button data-toggle="collapse" class="navbar-toggler" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+        <div class="container-fluid"><a class="navbar-brand" href="./index.html" style="margin-right: 30px;color: rgba(254,254,254,0.9);"><img src="assets/img/pluginIcon.svg" width="64px">Rider-DocGenerator</a><button data-toggle="collapse" class="navbar-toggler" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
             <div
                 class="collapse navbar-collapse" id="navcol-1">
                 <ul class="nav navbar-nav">
-                    <li class="nav-item" role="presentation"><a class="nav-link active" href="index.html">Namespaces</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link active" href="./index.html">Namespaces</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link active" href="#">Tree</a></li>
                 </ul>
         </div>
@@ -33,7 +33,7 @@
                     </tr>
                 </thead>
                 <tbody id="namespaces-table">
-                    <tr>
+                    <tr id="template-stub">
                         <td>
                             <div><a class="btn btn-link" data-toggle="collapse" aria-expanded="true" aria-controls="collapse-1" href="#collapse-1" role="button">Namespace1</a>
                                 <div class="collapse show" id="collapse-1">
@@ -47,11 +47,11 @@
                                             </thead>
                                             <tbody>
                                                 <tr>
-                                                    <td><a href="../class.html">Class1</a></td>
+                                                    <td><a href="class.html">Class1</a></td>
                                                     <td>Description for class 1</td>
                                                 </tr>
                                                 <tr>
-                                                    <td><a href="../class.html">Class2</a></td>
+                                                    <td><a href="class.html">Class2</a></td>
                                                     <td>Description for class 2</td>
                                                 </tr>
                                             </tbody>
@@ -61,7 +61,7 @@
                             </div>
                         </td>
                     </tr>
-                    <tr>
+                    <tr id="template-stub">
                         <td>
                             <div><a class="btn btn-link" data-toggle="collapse" aria-expanded="false" aria-controls="collapse-2" href="#collapse-2" role="button">Namespace2</a>
                                 <div class="collapse" id="collapse-2">
@@ -70,7 +70,7 @@
                             </div>
                         </td>
                     </tr>
-                    <tr>
+                    <tr id="template-stub">
                         <td>
                             <div><a class="btn btn-link" data-toggle="collapse" aria-expanded="false" aria-controls="collapse-3" href="#collapse-3" role="button">Namepace3</a>
                                 <div class="collapse" id="collapse-3">
