--- a/src/main/resources/html_templates/namespace/namespace.html
+++ b/src/main/resources/html_templates/namespace/namespace.html
@@ -11,19 +11,21 @@
 
 <body>
     <nav class="navbar navbar-light navbar-expand-md" style="background-color: #93b7d1;padding-top: 0px;padding-bottom: 0px;">
-        <div class="container-fluid"><a class="navbar-brand text-light" href="index/index.html" style="margin-right: 30px;"><img src="assets/img/pluginIcon.svg" width="64px">Rider-DocGenerator</a><button data-toggle="collapse" class="navbar-toggler" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+        <div class="container-fluid"><a class="navbar-brand text-light" href="./index.html" style="margin-right: 30px;"><img src="assets/img/pluginIcon.svg" width="64px">Rider-DocGenerator</a><button data-toggle="collapse" class="navbar-toggler" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
             <div
                 class="collapse navbar-collapse" id="navcol-1">
                 <ul class="nav navbar-nav">
-                    <li class="nav-item" role="presentation"><a class="nav-link active" href="index/index.html">Namespaces</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link active" href="./index.html">Namespaces</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link active" href="#">Tree</a></li>
                 </ul>
         </div>
         </div>
     </nav>
     <main>
-        <div class="container">
+        <div class="container" id="heading-container">
             <h1 id="namespace-title">Namespace name</h1>
+        </div>
+        <div class="container" id="template-stub">
             <div class="table-responsive" style="margin-top: 10px;">
                 <table class="table">
                     <thead>
@@ -36,7 +38,7 @@
                             <td class="table-secondary table-secondary-header"><strong>Interface</strong></td>
                             <td class="table-secondary table-secondary-header"><strong>Description</strong></td>
                         </tr>
-                        <tr>
+                        <tr id="template-stub">
                             <td style="font-size: 14px;"><a href="class.html">Interface1</a></td>
                             <td style="font-size: 14px;">Description of Interafce</td>
                         </tr>
@@ -44,28 +46,7 @@
                 </table>
             </div>
         </div>
-        <div class="container">
-            <div class="table-responsive">
-                <table class="table">
-                    <thead>
-                        <tr>
-                            <th class="table-header-name">Class Summary</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr>
-                            <td class="table-secondary table-secondary-header"><strong>Class</strong></td>
-                            <td class="table-secondary table-secondary-header"><strong>Description</strong></td>
-                        </tr>
-                        <tr>
-                            <td style="font-size: 14px;"><a href="class.html">Class2</a></td>
-                            <td style="font-size: 14px;">Description of class<br></td>
-                        </tr>
-                    </tbody>
-                </table>
-            </div>
-        </div>
-        <div class="container">
+        <div class="container" id="template-stub">
             <div class="table-responsive">
                 <table class="table">
                     <thead>
@@ -78,9 +59,51 @@
                             <td class="table-secondary table-secondary-header"><strong>Abstract Class</strong></td>
                             <td class="table-secondary table-secondary-header"><strong>Description</strong></td>
                         </tr>
-                        <tr>
+                        <tr id="template-stub">
                             <td style="font-size: 14px;"><a href="class.html">AbstractClass1</a></td>
                             <td style="font-size: 14px;">Description of Abstract class<br></td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+        <div class="container" id="template-stub">
+            <div class="table-responsive">
+                <table class="table">
+                    <thead>
+                        <tr>
+                            <th class="table-header-name">Enum Summary</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td class="table-secondary table-secondary-header"><strong>Enum</strong></td>
+                            <td class="table-secondary table-secondary-header"><strong>Description</strong></td>
+                        </tr>
+                        <tr id="template-stub">
+                            <td style="font-size: 14px;"><a href="class.html">Enum</a></td>
+                            <td style="font-size: 14px;">Description of Enum<br></td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+        <div class="container" id="template-stub">
+            <div class="table-responsive">
+                <table class="table">
+                    <thead>
+                        <tr>
+                            <th class="table-header-name">Struct Summary</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td class="table-secondary table-secondary-header"><strong>Struct</strong></td>
+                            <td class="table-secondary table-secondary-header"><strong>Description</strong></td>
+                        </tr>
+                        <tr id="template-stub">
+                            <td style="font-size: 14px;"><a href="class.html">Struct</a></td>
+                            <td style="font-size: 14px;">Description of Struct<br></td>
                         </tr>
                     </tbody>
                 </table>
