--- a/src/main/resources/html_templates/class/class.html
+++ b/src/main/resources/html_templates/class/class.html
@@ -11,11 +11,11 @@
 
 <body>
     <nav class="navbar navbar-light navbar-expand-md" style="background-color: #93b7d1;padding-top: 0px;padding-bottom: 0px;">
-        <div class="container-fluid"><a class="navbar-brand" href="index/index.html" style="color: rgba(255,255,255,0.9);margin-right: 30px;"><img src="assets/img/pluginIcon.svg" width="64px">Rider-DocGenerator</a><button data-toggle="collapse" class="navbar-toggler" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+        <div class="container-fluid"><a class="navbar-brand" href="./index.html" style="color: rgba(255,255,255,0.9);margin-right: 30px;"><img src="assets/img/pluginIcon.svg" width="64px">Rider-DocGenerator</a><button data-toggle="collapse" class="navbar-toggler" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
             <div
                 class="collapse navbar-collapse" id="navcol-1">
                 <ul class="nav navbar-nav">
-                    <li class="nav-item" role="presentation"><a class="nav-link active" href="index/index.html">Namespaces</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link active" href="./index.html">Namespaces</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link active" href="#">Tree</a></li>
                 </ul>
         </div>
@@ -23,17 +23,51 @@
     </nav>
     <main>
         <div class="container">
-            <h6 id="namespace-title" style="padding-top: 10px;">Namespace:&nbsp;<a href="#">Name</a></h6>
-            <h4>Class Name</h4>
+            <h6 id="namespace-title" style="padding-top: 10px;">Namespace:&nbsp;<a id="template-stub" href="#">Name</a></h6>
+            <h4 id="class-title">Class Name</h4>
             <div></div>
             <div>
-                <p><strong>All superinterfaces:&nbsp;</strong><br><a href="#">Interface1</a></p>
-                <p><strong>All known implementing superclasses:&nbsp;</strong><br><a href="#">Interface1</a></p>
+                <p id="superinterfaces"><strong>All superinterfaces:&nbsp;</strong><br><a id="template-stub" href="#">Interface1</a></p>
+                <p id="superclasses"><strong>All known implementing superclasses:&nbsp;</strong><br><a id="template-stub" href="#">Interface1</a></p>
             </div>
         </div>
     </main>
     <div class="container">
-        <p>Class description...</p>
+        <p id="description">Class description...</p>
+    </div>
+    <div class="container border rounded-0 border-secondary" style="padding: 20px;background-color: rgba(0,0,0,0.05);margin-bottom: 10px;">
+        <h5>Variables Summary</h5>
+        <div class="table-responsive">
+            <table class="table">
+                <thead>
+                    <tr>
+                        <th class="table-header-name">All Methods</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr id="table-variables-first-row">
+                        <td class="table-secondary table-secondary-header">Modifier and Type</td>
+                        <td class="table-secondary table-secondary-header">Variable</td>
+                        <td class="table-secondary table-secondary-header">Description</td>
+                    </tr>
+                    <tr id="template-stub">
+                        <td class="table-light table-secondary-header">public void</td>
+                        <td class="table-light table-secondary-header"><a href="#">Method1()</a></td>
+                        <td class="table-light table-secondary-header">Just Method</td>
+                    </tr>
+                    <tr id="template-stub">
+                        <td class="table-secondary table-secondary-header">public void</td>
+                        <td class="table-secondary table-secondary-header"><a href="#">Merhod2()</a></td>
+                        <td class="table-secondary table-secondary-header">Cell 3</td>
+                    </tr>
+                    <tr id="template-stub">
+                        <td class="table-light table-secondary-header">Cell 1</td>
+                        <td class="table-light table-secondary-header"><a href="#">Method3(int s)</a></td>
+                        <td class="table-light table-secondary-header">Cell 3</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
     </div>
     <div class="container border rounded-0 border-secondary" style="padding: 20px;background-color: rgba(0,0,0,0.05);margin-bottom: 10px;">
         <h5>Method Summary</h5>
@@ -45,22 +79,22 @@
                     </tr>
                 </thead>
                 <tbody>
-                    <tr>
+                    <tr id="table-methods-first-row">
                         <td class="table-secondary table-secondary-header">Modifier and Type</td>
                         <td class="table-secondary table-secondary-header">Method</td>
                         <td class="table-secondary table-secondary-header">Description</td>
                     </tr>
-                    <tr>
+                    <tr id="template-stub">
                         <td class="table-light table-secondary-header">public void</td>
                         <td class="table-light table-secondary-header"><a href="#">Method1()</a></td>
                         <td class="table-light table-secondary-header">Just Method</td>
                     </tr>
-                    <tr>
+                    <tr id="template-stub">
                         <td class="table-secondary table-secondary-header">public void</td>
                         <td class="table-secondary table-secondary-header"><a href="#">Merhod2()</a></td>
                         <td class="table-secondary table-secondary-header">Cell 3</td>
                     </tr>
-                    <tr>
+                    <tr id="template-stub">
                         <td class="table-light table-secondary-header">Cell 1</td>
                         <td class="table-light table-secondary-header"><a href="#">Method3(int s)</a></td>
                         <td class="table-light table-secondary-header">Cell 3</td>
@@ -70,7 +104,7 @@
         </div>
     </div>
     <div class="container border rounded-0 border-secondary" style="padding: 20px;background-color: rgba(0,0,0,0.05);margin-top: 10px;">
-        <h5>Method Details</h5>
+        <h5 id="method-details">Method Details</h5>
         <div class="table-responsive">
             <table class="table">
                 <thead>
